Метод слияния деревьев и тесты слияния для форматов INI и BIND

--- a/data/tests/configs/named.conf
+++ b/data/tests/configs/named.conf
@@ -39,6 +39,10 @@ logging {
 
 # Корневая зона
 zone "." {
+        /* multiline
+         comment
+          in root
+        */
         type hint;
         file "named.root";
 };
