Допилил парсеры и тесты для форматов Plasma и Samba

--- a/data/tests/configs/ini_merge_dst.ini
+++ b/data/tests/configs/ini_merge_dst.ini
@@ -1,6 +1,9 @@
+# This one is useful for people to share files
 [section1]
 key1 = value1
+;   printable = yes
 key2 = value2
+# Other examples.
 
 [section2]
 key3 = value3
