--- a/data/tests/configs/ini_merge_result.ini
+++ b/data/tests/configs/ini_merge_result.ini
@@ -1,4 +1,7 @@
+# This one is useful for people to share files
 [section1]
 some_key = some_value
+;   printable = yes
 key2 = new key2 value
+# Other examples.
 some_key2 = another value
